tests/templates/misc/compile_fail/forward_non_path_fn.rs
use pre::pre;

fn foo() {}

#[pre]
fn main() {
    let array = [foo];

    #[forward(foo)]
    array[0]();
}
